// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourProgressBar renders correctly for < 18% Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "17.5%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#000000",
          "fontSize": 19,
          "left": "19.00%",
          "position": "absolute",
        },
      ]
    }
  >
    17.5%
  </Text>
</View>
`;

exports[`TourProgressBar renders correctly for > 18% Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "54.300000000000004%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#fff",
          "fontSize": 19,
          "left": "39.80%",
          "position": "absolute",
        },
      ]
    }
  >
    54.3%
  </Text>
</View>
`;

exports[`TourProgressBar renders correctly for > 100% Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "100%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#fff",
          "fontSize": 19,
          "left": "44%",
          "position": "absolute",
        },
      ]
    }
  >
    123.4%
  </Text>
</View>
`;

exports[`TourProgressBar renders correctly for 0 Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "0%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#000000",
          "fontSize": 19,
          "left": "1.50%",
          "position": "absolute",
        },
      ]
    }
  >
    0.0%
  </Text>
</View>
`;

exports[`TourProgressBar renders correctly for 18% Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "18%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#fff",
          "fontSize": 19,
          "left": "3.50%",
          "position": "absolute",
        },
      ]
    }
  >
    18.0%
  </Text>
</View>
`;

exports[`TourProgressBar renders correctly for 100% Percent 1`] = `
<View>
  <View
    appearance="default"
    onLayout={[Function]}
    size="small"
    status="primary"
    style={
      [
        {
          "backgroundColor": "rgba(51, 102, 255, 0.24)",
          "borderRadius": 6,
          "height": 27,
        },
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#eaeaea",
          "borderRadius": 6,
          "height": 27,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF6E14",
          "borderRadius": 6,
          "height": 27,
          "width": "100%",
        }
      }
    />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "color": "#fff",
          "fontSize": 19,
          "left": "44%",
          "position": "absolute",
        },
      ]
    }
  >
    100.0%
  </Text>
</View>
`;
